website/css/css3.css
html, body{
    /*font-family: 'upheavtt';*/
}
h1, h2, h3, h4, h5, h6,
.nav-item.nav-link{
    font-family: 'upheavtt';
    text-align: center;
    text-transform: uppercase;
}
.c-g{
    color: #008a00;
}
.c-b{
    color: #000000;
}
.b-g{
    background-color: #008a00;
}
.b-b{
    background-color: #000000;
}
.m-auto{
    margin: 0 auto;
}
.waypoint{
    opacity: 0;
    -webkit-transition: all 0.8s ease-out 0.2s;
    -moz-transition: all 0.8s ease-out 0.2s;
    -o-transition: all 0.8s ease-out 0.2s;
    -ms-transition: all 0.8s ease-out 0.2s;
    transition: all 0.8s ease-out 0.2s;
}
.waypoint.animate{
    opacity: 1;
}

.sep{
    width: 1rem;
    margin: 0 auto;
    clear:both;
}
ul.three-d{
    list-style-type: square;
    margin: 0 auto;
    padding: 0;
    width: 3rem;
}
ul.three-d li{
    width: 1rem;
    float: left;
    margin: 0 0 -1.4rem 0;
    padding: 0;
     -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
}
.navbar{
    margin-bottom: 0;
    border-bottom: .2rem solid #008a00;
}
.navbar-light .navbar-nav .nav-item.nav-link{
    color: rgba(0,0,0,.9);
}
.navbar-light .navbar-nav .nav-item.nav-link:hover{
    color: rgba(0,0,0,.5);
}
.navbar-light .navbar-nav .nav-item.nav-link.active{
    border-bottom: .2rem solid #00a800;
}
.navbar-light .navbar-nav .nav-item.nav-link.active:after{
    border-bottom: .2rem solid #00a800;
}
.navbar-toggler{
    padding: .75rem .75rem;
    font-size: 1.4rem;
}
.navbar-toggler:focus {
    outline: 0;
}
.navbar.navbar-fixed-top .nav.navbar-nav .nav-item.nav-link{
    width: 100%;
    padding: 0;
    margin: 0 auto;
}
.navbar-toggler.pull-left.hidden-sm-up,
.navbar-brand.pull-right.hidden-sm-up{
    width: 49%;
}
.navbar-toggler.pull-left.hidden-sm-up{
    text-align: left;
}
.navbar-brand.pull-right.hidden-sm-up{
    margin: 0;
    text-align: right;
}
.navbar-brand.pull-right.hidden-sm-up img {
    width: 3rem;
    display: inline;
}
section {
    padding: 0;
    position: relative;
    background-color: #f7f7f7;
    min-height: 50vh;
}
section h2.heading{
    margin-top: 5rem;
}
.no-parallax{
    z-index: 9;
}
.section-header {
    padding: 0;
    /*height: 100vh;*/
    position: relative;
}
.section .parallax, 
.section .full-image {
    width: 100%;
    height: 100vh;
    overflow: hidden;
    display: block;
}
.section .parallax > img, 
.section .full-image > img {
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    position: relative;
    z-index: 1;
}
.container-custom{
    padding-right: .9375rem;
    padding-left: .9375rem;
    margin-right: auto;
    margin-left: auto;
}
.section .container-custom {
    z-index: 3;
    position: absolute;
    width: 100%;
    max-width: 100%;
    height: 100%;
    display: block;
    top: 0;
}
.section .content {
    /*background-color: #f00;*/
    /*padding-top: 6rem;*/
    padding-bottom: 6rem;
    margin-bottom: 0;
    position: relative;
    color: white;
    text-align: center;
    text-shadow: 0px .1rem .3rem rgba(0, 0, 0, 0.2);
    vertical-align: center;
    line-height: 1.7;
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
.section-header .container {
    z-index: 3;
    position: absolute;
    width: 100%;
    max-width: 100%;
    height: 100%;
    display: block;
    top: 0;
}
.section-header .content {
    /*background-color: #f00;*/
    /*padding-top: 6rem;*/
    padding-bottom: 6rem;
    margin-bottom: 0;
    position: relative;
    color: white;
    text-align: center;
    text-shadow: 0px .1rem .3rem rgba(0, 0, 0, 0.2);
    vertical-align: center;
    line-height: 1.7;
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
.black-ball{
    background-color: #000000;
    border-radius: 50%;
    margin: 0 auto;
    /*width: 10rem;
    height: 10rem;*/
    /*width: 38%;
    height: 38%;*/
    width: 50vw;
    height: 50vw;
    margin-top: 3rem;
    padding: .5rem;
}
.section-header .content .lead{
    display: none;
    font-size: .8rem;
    line-height: 1rem;
    padding: .5rem 2rem 0;
}
a.scroll-arrow {
    background-color: #00a800;
    color: white;
    width: 3.5rem;
    height: 3.5rem;
    /*border: .5rem solid white;*/
    display: block;
    position: absolute;
    bottom: -1.7rem;
    left: calc(50% - 1.7rem);
    z-index: 10;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
}

/*
    About
 */
.square{
    /*width: 5rem;
    height: 5rem;
    background-color: #00a800;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);*/
    margin: 2rem auto;
}

/*
 What We Do
 */
section#what-we-do .parallax{
    height: 120vh;
}
.what-we-do-pic{
    width: 15rem;
}
/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
    height: 10rem;
    width: 80vw;
    margin: -1.5rem auto 0;
    z-index: 10;
}
.carousel-inner{
    border: .2rem solid #008a00;
}

/* Declare heights because of positioning of img element */
.carousel-item {
  height: 10rem;
  background-color: #000;
}
/*.carousel-item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 10rem;
}*/
.carousel-caption{
    margin: 0;
    padding: 0;
    top: 1rem;
}

.carousel-indicators {
  top: 1.5rem;
  right: 1.5rem;
  bottom: auto;
  left: auto;
  width: 1rem;
  margin-left: 0;
}

.carousel-indicators > li {
  margin-bottom: .25rem;
}

/*
 team
 */

section#team{
    z-index: 8;
}

section#team h3.title{
    min-height: 3.5rem;
}
/* ... */

